# CppCTP

./: .gitignore  README.md  push.bat  push.sh
Analysis/: ApiStruct.py
CppCTP_API/market/: CMakeCache.txt  Makefile  MdSpi.cpp  cmake_install.cmake  demoTradingDay.con  main.cpp  quant_ctp_md
CppCTP_API/trade/: CMakeCache.txt  (+5 more)
CppCTP_Integration/: README.md  Strategy.cpp
CppCTP_Integration/xTrader/: Algorithm.cpp  Algorithm.h  ApiCommand.cpp  ApiCommand.h  CMakeCache.txt  CMakeLists.txt  CTP_Manager.cpp  CTP_Manager.h  DBManager.cpp  DBManager.h  Debug.h  FutureAccount.cpp  FutureAccount.h  Login.h  LoginCommand.cpp  LoginCommand.h  Makefile  MarketConfig.cpp  MarketConfig.h  MdSpi.cpp  MdSpi.h  Order.cpp  Order.h  OrderActionCommand.cpp  OrderActionCommand.h  OrderInsertCommand.cpp  OrderInsertCommand.h  PositionDetail.cpp  PositionDetail.h  QrySettlementInfoConfirmCommand.cpp  QrySettlementInfoConfirmCommand.h  Session.cpp  Session.h  SessionID.cpp  SessionID.h  SgitFtdcTraderApi.h  Strategy.cpp  Strategy.h  TdSpi.cpp  TdSpi.h  (+25 more)
CppCTP_Integration/xTrader/astah_flow_chart/: trade_flow_chart.asta  trade_flow_chart.asta.bak
CppCTP_Integration/xTrader/command/: ApiCommand.cpp  ApiCommand.h  LoginCommand.cpp  LoginCommand.h  OrderActionCommand.h  OrderInsertCommand.cpp  OrderInsertCommand.h
CppCTP_Integration/xTrader/config/: instruments_time.ini  mongo.ini
CppCTP_Integration/xTrader/conn/md/180.168.146.187_10011/: TradingDay.con
CppCTP_Integration/xTrader/conn/md/180.168.146.187_10031/: TradingDay.con
CppCTP_Integration/xTrader/conn/td/058176/: Private.con  Public.con  QueryRsp.con  TradingDay.con
CppCTP_Integration/xTrader/conn/td/063802/: Private.con  Public.con  QueryRsp.con  TradingDay.con
CppCTP_Integration/xTrader/logs/: async_log.txt_2017-05-21_22-33  async_log.txt_2017-05-21_22-45  xts_db_log.txt_2017-05-23_09-27  xts_db_log.txt_2017-05-23_09-30  xts_db_log.txt_2017-05-23_09-35  xts_log.txt_2017-05-22_20-23  xts_log.txt_2017-05-23_09-27  xts_log.txt_2017-05-23_09-30  xts_log.txt_2017-05-23_09-35  xts_log_ctpmanager.txt_2017-05-23_13-09  xts_log_ctpmanager.txt_2017-05-23_13-37  xts_log_ctpmanager.txt_2017-05-23_13-39  xts_log_ctpmanager.txt_2017-05-23_20-25  xts_log_db.txt_2017-05-23_13-09  xts_log_db.txt_2017-05-23_13-37  xts_log_db.txt_2017-05-23_13-39  xts_log_db.txt_2017-05-23_20-25  xts_log_user_091921.txt_2017-05-23_13-09  xts_log_user_091921.txt_2017-05-23_13-37  xts_log_user_091921.txt_2017-05-23_13-39  xts_log_user_091921.txt_2017-05-23_20-25
CppCTP_OPS/: README.md  auto_start.sh  auto_stop.sh  mongo_backup.sh  mongo_restore.sh  计划任务crontab配置.txt
CppCTP_SOCKET/socket_demo/multi-thread-socket/server/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  msg.c  multi-thread-socket-server  socket_server.c
(+172 files in other folders)
